# omen-fan-control

./: .gitignore  README.md  fan_curve_widget.py  hp-wmi.c  hp-wmi.c.orig  install_driver.sh  omen_cli.py  omen_gui.py  omen_logic.py  pyproject.toml  requirements.txt
arch/hp-wmi-omen/: PKGBUILD
arch/omen-fan-control/: PKGBUILD
deb/: build-in-docker.sh  build.sh
deb/hp-wmi-omen-dkms/debian/: changelog  control  hp-wmi-omen-dkms.postinst  hp-wmi-omen-dkms.prerm  rules
deb/omen-fan-control/debian/: changelog  control  rules
src/omen_fan_control/: __init__.py  cli.py  fan_curve_widget.py  gui.py  logic.py
src/omen_fan_control/data/: omen-fan-control.service
src/omen_fan_control/data/driver/: Makefile  dkms.conf  install_driver.sh
src/omen_fan_control/data/driver/hooks/: 90-hp-wmi-omen.hook  99-hp-wmi-omen.install  zz-hp-wmi-omen
src/omen_fan_control/data/driver/hp-wmi-omen/: Makefile  hp-wmi.c
src/omen_fan_control/data/driver/src/: Makefile
